# spatial_infrastructure

./: .env.example  .gitignore  README.md  database.py  ingest_data.py  ingest_focused.py  main.py  nigeria_boundary.geojson  pyproject.toml  requirements.txt  test_admin_api.py  test_ui_playwright.py
static/css/: style.css
static/js/: map.js
templates/: admin_dashboard.html  admin_login.html  apply_metadata.html  index.html
