[project]
name = "spatil-infrastructure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=26.0.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "playwright>=1.60.0",
    "psycopg2-binary>=2.9.12",
    "pyshp>=3.0.12",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
